# Bim-Data-

./: Pasted-12524019128171-1-12524019128171-INFO-ifc-processor-Updating-property-ePset-SimplebimBasicQuantit-1726944023957.txt  Pasted-INFO-ifc-processor-Updating-property-CCAT-COMUCCAT-ORG-CONSERVACIO-Eix-Diagonal-INFO-ifc-processo-1726942868503.txt  Pasted-Updating-property-Element-GUID-000G0003a01m010G000001-PSet-CCAT-COMU-Property-CCAT-Y-INICIAL--1726942117146.txt  Pasted-Warning-IfcQuantityArea-does-not-have-attribute-yAreaValue-Warning-IfcQuantityVolume-does-not-have-1726864210440.txt  bim_collaborator.py  excel_handler.py  ifc_processor.py  ifc_visualizer.py  main.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  sample.ifc  utils.py
